# crupest

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  aio  crupest-words.txt  cspell.yaml  dictionary.txt  hurd.yaml  project-words.txt  requirements.txt  update-blog  www-dev
.github/: copilot-instructions.md
configs/: Microsoft.PowerShell_profile.ps1  copy-nvim-config.ps1  copy-nvim-config.sh  winget.json
deno/: deno.json
hurd/: hurd.yaml  path_max.c
services/: .gitignore  base-config  gen-tplt  (+7 more)
store/works/python/: pyproject.toml
store/works/python/cru/: __init__.py  _base.py  template.py
store/works/python/cru/service/: __main__.py  _app.py  _gen_cmd.py
tools/cru-py/: .gitignore  aio  aio.py  pyproject.toml  requirements.txt  update-blog  www-dev
tools/cru-py/cru/: __init__.py  _base.py  _const.py  _cru.py  _decorator.py  _error.py  _event.py  _func.py  _helper.py  _iter.py  _list.py  _meta.py  _path.py  _type.py  app.py  attr.py  config.py  error.py  excp.py  list.py  parsing.py  paths.py  property.py  system.py  template.py  tool.py  value.py
tools/cru-py/cru/_util/: __init__.py  _const.py  _func.py  _lang.py  _list.py  _type.py
tools/cru-py/cru/service/: __main__.py  _app.py  _base.py  _config.py  _data.py  _docker.py  _external.py  _manager.py  _nginx.py  _template.py  docker.py  nginx.py
tools/cru-py/cru/util/: __init__.py  _const.py  _cru.py  _event.py  _func.py  _list.py
tools/cru-py/crupest/: aio.py  certbot.py  config.py  download_tools.py  helper.py  nginx.py  setup.py  template2.py  test.py  tui.py  ui_base.py
(+904 files in other folders)
