[project]
name = "cru-py"
version = "0.1.0"
requires-python = ">=3.11"

[tool.poetry]
package-mode = false
name = "cru"
version = "0.1.0"
description = ""
authors = ["Yuqian Yang <crupest@crupest.life>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"

[tool.ruff.lint]
select = ["E", "F", "B"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
