[project]
name = "cru"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.9.6"

[tool.ruff.lint]
select = ["E", "F", "B"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
